| Bug #32963 | falcon_bug_22173a fails | ||
|---|---|---|---|
| Submitted: | 4 Dec 2007 15:29 | Modified: | 16 Mar 2008 11:51 |
| Reporter: | Alexander Nozdrin | ||
| Status: | Closed | ||
| Category: | Server: Falcon | Severity: | S1 (Critical) |
| Version: | 6.0 | OS: | Any |
| Assigned to: | Christopher Powers | Target Version: | |
| Triage: | D3 (Medium) | ||
[4 Dec 2007 15:29]
Alexander Nozdrin
[4 Dec 2007 15:33]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/39210 ChangeSet@1.2738, 2007-12-04 17:37:33+03:00, anozdrin@station. +1 -0 Disable falcon_bug_22173a (BUG#32963: falcon_bug_22173a fails).
[4 Dec 2007 15:34]
Alexander Nozdrin
The test case disabled in 6.0-runtime.
[4 Dec 2007 16:07]
Hakan Kuecuekyilmaz
falcon_bug_22173a hangs.
[5 Dec 2007 3:47]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/39271 ChangeSet@1.2733, 2007-12-04 20:46:39-06:00, chris@xeno.mysql.com +2 -0 Bug#32963, falcon_bug_22173a fails - Eliminated potential deadlock between scavenger and truncate operation
[6 Dec 2007 11:02]
Bugs System
Pushed into 6.0.5-alpha
[21 Jan 2008 20:03]
Vladislav Vaintroub
Bug reappeared in the most recent team tree
[21 Jan 2008 20:13]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/41086 ChangeSet@1.2776, 2008-01-21 20:12:58+01:00, vvaintroub@vaio. +1 -0 Bug#32963 - fixed regression, where test suite hangs during concurrent TRUNCATE(falcon_bug_22173a)
[21 Jan 2008 20:27]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/41087 ChangeSet@1.2776, 2008-01-21 20:26:20+01:00, vvaintroub@vaio. +1 -0 Bug#32963 - fixed regression, where test suite hangs during concurrent TRUNCATE(falcon_bug_22173a)
[21 Feb 2008 17:13]
Kevin Lewis
Patch is in mysql-6.0-release version 6.0.4
[13 Mar 2008 0:02]
Bugs System
Pushed into 6.0.4-alpha
[16 Mar 2008 11:51]
MC Brown
Test failure - no changelog entry required.
