Bug#32963 - fixed regression, where test suite hangs during concurrent TRUNCATE(falcon_bug_22173a)